fix close btn alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,12 +25,15 @@ body {
     font-size: 30px;
     cursor: pointer;
     align-self: flex-end;
+    position: relative;    
+    top:0.5em
 }
 
 @media screen and (min-width: 960px) {
     .fa-window-close {
         position: relative;
-        right: 4.2em;
+        right: .2em;
+        top:0.5em
     }
 }
 
